protocols/src/tests/snapshots/protocols__frontend__serialize__tests__cond.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
struct Multiplier {
  in a: u32,
  in b: u32,
  out c: u1,
  out s: u32,
}

fn mul<dut: Multiplier>(a: u32, b: u32, s: u32) {
  dut.a := a;
  dut.b := b;
  step();
  step();
  fork();
  dut.a := X;
  dut.b := X;
  step();
  if 8 == 0 {
    step();
  } else {
    fork();
  }
  dut.c := 1;
  s := dut.s;
}
