protocols/src/tests/snapshots/protocols__frontend__serialize__tests__func_arg_invalid_prot.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
error: Assigning to undeclared symbol: c
  ┌─ tests/misc/func_arg_invalid.prot:9:3
  │
9 │   c := b;
  │   ^ Assigning to undeclared symbol: c
