protocols/src/tests/snapshots/protocols__frontend__serialize__tests__if_without_else.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
struct DualIdentity {
  in a: u64,
  in b: u64,
}

prot if_without_else<dut: DualIdentity>(a: u64, b: u64) {
  if dut.b == 64'd1 {
    dut.a := a;
  } else {
  }
  step();
}
