protocols/src/tests/snapshots/protocols__frontend__serialize__tests__invalid_lex.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
error: Lexing failed: expected dec_integer
  ┌─ tests/misc/invalid_lex.prot:9:8
  │
9 │   step(-1);
  │        ^ Lexing failed: expected dec_integer
