protocols/src/tests/snapshots/protocols__frontend__serialize__tests__loop_with_assigns.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
struct Adder {
  in a: u32,
  in b: u32,
  out s: u32,
}

fn loop_add<DUT: Adder>(a: u32, b: u32, num_iters: uint, s: u32) {
  repeat num_iters iterations {
    DUT.a := a;
    DUT.b := b;
    step();
    DUT.a := X;
    DUT.b := X;
    assert_eq(s, DUT.s);
  }
  fork();
  step();
}
