protocols/src/tests/snapshots/protocols__frontend__serialize__tests__mul.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
struct Multiplier {
  in a: u32,
  in b: u32,
  out s: u32,
}

prot mul<dut: Multiplier>(a: u32, b: u32, s: u32) {
  dut.a := a;
  dut.b := b;
  step();
  step();
  fork();
  dut.a := X;
  dut.b := X;
  step();
  assert_eq(s, dut.s);
  step();
}
